--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "esm-polyfills",
   "version": "0.1.0",
   "description": "Polyfills for ESM like __dirname, __filename, etc",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "commonjs",
   "repository": "https://github.com/subbu963/esm-polyfills",
   "author": "Aditya Subramanyam",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "get-caller-file": "^2.0.5"
+  },
+  "devDependencies": {
+    "@types/node": "16",
+    "typescript": "^4.9.4"
+  }
 }
