--- a/package.json
+++ b/package.json
@@ -1,18 +1,51 @@
 {
-  "name": "esm-polyfills",
-  "version": "0.1.0",
-  "description": "Polyfills for ESM like __dirname, __filename, etc",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "commonjs",
-  "repository": "https://github.com/subbu963/esm-polyfills",
-  "author": "Aditya Subramanyam",
-  "license": "MIT",
-  "dependencies": {
-    "get-caller-file": "^2.0.5"
-  },
-  "devDependencies": {
-    "@types/node": "16",
-    "typescript": "^4.9.4"
-  }
+    "name": "esm-polyfills",
+    "version": "0.1.0",
+    "description": "Polyfills for ESM like __dirname, __filename, etc",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "type": "commonjs",
+    "repository": "https://github.com/subbu963/esm-polyfills",
+    "author": "Aditya Subramanyam",
+    "license": "MIT",
+    "scripts": {
+        "dev": "tsc --watch",
+        "build": "tsc",
+        "lint": "eslint --ignore-path .eslintignore --ext .ts src",
+        "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    },
+    "dependencies": {
+        "get-caller-file": "^2.0.5"
+    },
+    "devDependencies": {
+        "@types/node": "16",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.49.0",
+        "cz-conventional-changelog": "^3.3.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-standard-with-typescript": "^33.0.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.0.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^13.1.0",
+        "prettier": "^2.8.3",
+        "typescript": "*"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "yarn format",
+            "yarn lint"
+        ],
+        "*.{json,md,html,css}": [
+            "yarn format"
+        ]
+    }
 }
