--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
+        env:
+          HUSKY: 0
       - name: Install dependencies and build 🔧
         run: yarn && yarn build
       - name:  'Automated Version Bump'
