chore: name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@lordofthethings/esm-polyfills",
+    "name": "@subbu963/esm-polyfills",
     "version": "0.1.5",
     "description": "Polyfills for ESM like __dirname, __filename, etc",
     "main": "dist/index.js",
