docs: added more keywords and readme grammar fixes

--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
         "polyfill",
         "polyfills",
         "esm",
-        "esmodules"
+        "esmodules",
+        "require",
+        "__filename",
+        "__dirname",
+        "require.resolve",
+        "commonjs"
     ],
     "scripts": {
         "dev": "tsc --watch",
