feat(publishing major version): publishing major version
publishing major version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
       - 'package.json'
       - 'yarn.lock'
       - 'tsconfig.json'
+      - .github/workflows/main.yml
   workflow_dispatch:
     ref: main
 jobs:
